Update several pages

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-23 Sat 16:40 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -43,6 +43,15 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="outline-container-orgc5107d5" class="outline-2">
+<h2 id="orgc5107d5">Appstore</h2>
+<div class="outline-text-2" id="text-orgc5107d5">
+<ul class="org-ul">
+<li><a target="_blank" href="https://help.apple.com/app-store-connect/#/devd274dd925">Screenshot specifications</a>:
+기기별 스크린샷 사이즈</li>
+</ul>
+</div>
+</div>
+<div id="footer"><div id="time">2019년 11월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
