--- a/web-dev-links.html
+++ b/web-dev-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-23 Sat 00:05 -->
+<!-- 2019-11-23 Sat 16:40 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>웹 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -58,6 +58,14 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><a target="_blank" href="https://mciastek.github.io/sal/">Sal.js</a>: 가볍고 의존성 없는 스크롤
 애니메이션 라이브러리</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-org59c3b6a" class="outline-2">
+<h2 id="org59c3b6a">HTML</h2>
+<div class="outline-text-2" id="text-org59c3b6a">
+<ul class="org-ul">
+<li><a target="_blank" href="https://armadillo-dev.github.io/html/ux/makes-good-ux-form-with-html/">좋은 사용자 경험(UX)을 제공하는 Form 만들기</a></li>
 </ul>
 </div>
 </div>
