--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-23 Sat 00:07 -->
+<!-- 2019-11-23 Sat 16:41 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -43,7 +43,9 @@ gtag('config', 'UA-44534026-1');
 <li><a href="emacs-lisp-tips.html">Emacs Lisp 팁</a></li>
 <li><a href="install-emacs.html">Emacs 설치</a></li>
 <li><a href="index.html">Frontpage</a></li>
+<li><a href="git.html">Git</a></li>
 <li><a href="lisp.html">Lisp</a></li>
+<li><a href="magit.html">Magit</a></li>
 <li><a href="mongodb.html">MongoDB</a></li>
 <li><a href="org-mode.html">Org Mode</a></li>
 <li><a href="org-tip.html">Org Mode 팁 모음</a></li>
