Update several pages

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-23 Sat 16:40 -->
+<!-- 2019-11-23 Sat 23:24 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음 - Seorenn Static Pages</title>
@@ -31,6 +31,8 @@ gtag('config', 'UA-44534026-1');
 <h2 id="orgba786fa">Swift</h2>
 <div class="outline-text-2" id="text-orgba786fa">
 <ul class="org-ul">
+<li><a target="_blank" href="https://www.vadimbulavin.com/debugging-with-combine-swift-framework/">Debugging with Swift Combine Framework</a></li>
+<li><a target="_blank" href="https://swiftsenpai.com/swift/create-the-perfect-userdefaults-wrapper-using-property-wrapper/">Create the Perfect UserDefaults Wrapper Using Property Wrapper</a></li>
 <li><a target="_blank" href="https://www.notion.so/Property-Wrapper-5ee4a361e9d744fe9cb07b4dfa6f96ac">Property Wrapper, 무엇이 무엇을 감싸는가?</a></li>
 </ul>
 </div>
