--- a/doom-emacs-install.html
+++ b/doom-emacs-install.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-19 Tue 18:47 -->
+<!-- 2019-11-24 Sun 00:22 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 설치하기 - Seorenn Static Pages</title>
@@ -93,6 +93,24 @@ Emacs 를 기동시켜서 제대로 동작하는지 확인해 봅시다.
 </p>
 </div>
 </div>
+<div id="outline-container-org05816c2" class="outline-2">
+<h2 id="org05816c2">추가 설치</h2>
+<div class="outline-text-2" id="text-org05816c2">
+<p>
+Doom Emacs 가 제대로 기동 되었다면 최초 한 번은 <code>SPC :</code> 를 누른 후
+<code>all-the-icons-install-fonts</code> 를 입력해 줍시다. 필요한 폰트 파일을 다운로드
+받아서 알아서 설치해 줄 것입니다.
+</p>
+
+<p>
+이 외에 미비한 사항은 doctor 커맨드를 통해 파악해 봅시다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">bin/doom doctor
+</pre>
+</div>
+</div>
+</div>
 <div id="outline-container-orgf023637" class="outline-2">
 <h2 id="orgf023637">업그레이드</h2>
 <div class="outline-text-2" id="text-orgf023637">
@@ -138,6 +156,6 @@ Doom Emacs 도 개발이 잦아서 변화가 자주 있는 편입니다. 또한 
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
