--- a/doom-emacs-config.html
+++ b/doom-emacs-config.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-18 Mon 18:10 -->
+<!-- 2019-11-24 Sun 00:22 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 설정 기본 - Seorenn Static Pages</title>
@@ -44,12 +44,39 @@ gtag('config', 'UA-44534026-1');
 모든 설정을 고친 후에는 터미널에서 아래 명령을 실행해야 합니다.
 </p>
 <div class="org-src-container">
-<pre class="src src-bash">$ ~/.emacs.d/bin/doom refresh
+<pre class="src src-bash">~/.emacs.d/bin/doom refresh
 </pre>
 </div>
 <p>
 해당 명령은 필요한 패키지를 파악하고 설치하는 기능도 가지고 있기 때문에 이
 명령을 실행하지 않을 경우 제대로 된 동작을 보증하지 않습니다.
+</p>
+
+<p>
+간혹 설정 후 쓸 모 없는 고아 패키지나 바이트코드가 남을 수 있습니다. 이 경우
+purge 를 사용해 청소할 수 있습니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">~/.emacs.d/bin/doom purge
+</pre>
+</div>
+<p>
+혹은 refresh 시 <code>-p</code> (purge) 옵션을 주는 방법도 있습니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">~/.emacs.d/bin/doom refresh -p
+</pre>
+</div>
+
+<p>
+만약 뭔가 문제가 있다 싶으면 doctor 를 호출해 봅시다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">~/.emacs.d/bin/doom doctor
+</pre>
+</div>
+<p>
+몇몇 부족하거나 이상한 부분을 알려줄 것입니다.
 </p>
 </div>
 </div>
@@ -139,6 +166,6 @@ Doom Emacs 에서 사용하지 않는 확장을 설치하려면 여기에 명시
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 18일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
