--- a/emacs.html
+++ b/emacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-19 Tue 20:32 -->
+<!-- 2019-11-24 Sun 00:07 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs - Seorenn Static Pages</title>
@@ -33,6 +33,46 @@ gtag('config', 'UA-44534026-1');
 Emacs Lisp Function 으로 구성되어 있습니다.
 </p>
 
+<div id="outline-container-orgd7d8e11" class="outline-2">
+<h2 id="orgd7d8e11">메모</h2>
+<div class="outline-text-2" id="text-orgd7d8e11">
+</div>
+<div id="outline-container-orgcdf1a7b" class="outline-3">
+<h3 id="orgcdf1a7b">How to debug freezing?</h3>
+<div class="outline-text-3" id="text-orgcdf1a7b">
+<p>
+모종의 사유로 인해 Emacs 가 멈쳤을 경우 SIGUSR2 신호를 주면 백트레이스를 얻을 수
+있다고 합니다.
+</p>
+
+<p>
+우선 실행 중인 Emacs 의 PID 를 알아야 합니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">ps -ef | <span style="color: #ECBE7B;">grep</span> Emacs | <span style="color: #ECBE7B;">grep</span> -v <span style="color: #ECBE7B;">grep</span>
+</pre>
+</div>
+<p>
+결과에서 두 번째 컬럼의 숫자가 PID 입니다.
+</p>
+
+<p>
+그 다음 이맥스를 멈추게 만듭니다. (&#x2026;)
+</p>
+
+<p>
+이제 Emacs 에 SIGUSR2 를 던져봅시다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash"><span style="color: #ECBE7B;">kill</span> -USR2 PID
+</pre>
+</div>
+<p>
+위에서 PID는 앞서 구한 Emacs 의 PID 숫자를 넣어야 합니다.
+</p>
+</div>
+</div>
+</div>
 <div id="outline-container-org0b9881a" class="outline-2">
 <h2 id="org0b9881a">관련글</h2>
 <div class="outline-text-2" id="text-org0b9881a">
@@ -40,6 +80,7 @@ Emacs Lisp Function 으로 구성되어 있습니다.
 <li><a href="./install-emacs.html">Emacs 설치</a></li>
 <li><a href="./org-mode.html">Org Mode</a></li>
 <li><a href="./org-publish.html">Org Publish</a></li>
+<li><a href="magit.html">Magit</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
 <li><a href="./spacemacs.html">Spacemacs</a></li>
 <li><a href="./lisp.html">Lisp</a></li>
@@ -47,6 +88,6 @@ Emacs Lisp Function 으로 구성되어 있습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
