--- a/magit.html
+++ b/magit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-23 Sat 16:40 -->
+<!-- 2019-11-24 Sun 00:22 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Magit - Seorenn Static Pages</title>
@@ -26,9 +26,125 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Magit</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
-(TODO)
+<h2><a href="/">Seorenn Static Pages</a></h2></header><blockquote>
+<p>
+It's Magit! A Git Porcelain inside Emacs
 </p>
-<div id="footer"><div id="time">2019년 11월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</blockquote>
+
+<p>
+에 그러니까&#x2026; Emacs용 Git 프론트엔드/클라이언트 확장입니다. 개인적으로는
+Emacs의 킬러 소프트웨어 중 하나라고 볼 수 있을 정도로 막강합니다.
+</p>
+
+<p>
+참고로 이 글은 순수 magit이 아닌 Doom Emacs 나 Spacemacs 용으로 커스터마이징 된
+단축키를 위주로 살펴봅니다.
+</p>
+
+<div id="outline-container-org6d68c26" class="outline-2">
+<h2 id="org6d68c26">magit-status</h2>
+<div class="outline-text-2" id="text-org6d68c26">
+<p>
+현재 상태를 표시하는 UI를 띄웁니다. 개인적으로 magit 을 시작하는 가장 좋은
+방법으로 사용합니다.
+</p>
+
+<p>
+함수이므로 당연히 <code>M-x</code> 명령으로 실행시킬 수도 있습니다.
+Doom Emacs 에서는 <code>SPC g g =, Spacemacs 에서는 =SPC g s</code> 단축키가 기본 바인딩
+되어 있습니다.
+</p>
+
+<p>
+아래의 단축키들은 모두 이 화면에서 시작됩니다.
+</p>
+</div>
+</div>
+<div id="outline-container-org67e0c00" class="outline-2">
+<h2 id="org67e0c00">Stage</h2>
+<div class="outline-text-2" id="text-org67e0c00">
+<p>
+수정 내역에서 <code>s</code> 를 누르면 스테이징이 됩니다. 각 수정내역에서 <code>TAB</code> 을 누르면
+간단한 diff를 볼 수 있는데, 여기서 선택영역을 지정하고 <code>s</code> 를 누르면 선택 영역만
+따로 스테이징이 됩니다.
+</p>
+
+<p>
+타이틀 부분을 선택하고 <code>s</code> 를 누르면 해당 분류의 파일들이 모두 스테이지 됩니다.
+</p>
+</div>
+</div>
+<div id="outline-container-org108f0e6" class="outline-2">
+<h2 id="org108f0e6">Commit</h2>
+<div class="outline-text-2" id="text-org108f0e6">
+<p>
+<code>c c</code> 를 누르면 커밋 모드로 돌입합니다. 스테이징 된 파일들의 간략한 변경점을 볼
+수 있으며 커밋 메시지를 작성할 수 있습니다.
+</p>
+
+<p>
+커밋메세지를 작성한 이후에는 다른 방법으로 커밋을 진행하는데, Doom Emacs 의 경우
+<code>:wq</code> 로 vim 을 종료하듯이 하면 커밋이 진행됩니다. Spacemacs 의 경우 <code>,c</code> 와
+같은 별도의 단축키가 배정되어 있으며 이 부분은 아래쪽에 주석으로 도움말이
+적혀있으니 참고합시다.
+</p>
+</div>
+</div>
+<div id="outline-container-orgfacdb8e" class="outline-2">
+<h2 id="orgfacdb8e">Log</h2>
+<div class="outline-text-2" id="text-orgfacdb8e">
+<p>
+<code>l l</code> 을 이용하면 로그를 볼 수 있습니다.
+</p>
+
+<p>
+각 커밋에서 <code>RET</code> 를 누르면 해당 커밋의 변경 내역을 볼 수도 있습니다.
+</p>
+</div>
+</div>
+<div id="outline-container-orgd6fcd08" class="outline-2">
+<h2 id="orgd6fcd08">Push</h2>
+<div class="outline-text-2" id="text-orgd6fcd08">
+<p>
+<code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시가 됩니다.
+</p>
+</div>
+</div>
+<div id="outline-container-orgf352b2d" class="outline-2">
+<h2 id="orgf352b2d">Pull</h2>
+<div class="outline-text-2" id="text-orgf352b2d">
+<p>
+<code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀이 됩니다.
+</p>
+</div>
+</div>
+<div id="outline-container-org58accb9" class="outline-2">
+<h2 id="org58accb9">Branch</h2>
+<div class="outline-text-2" id="text-org58accb9">
+<ul class="org-ul">
+<li><code>b c</code> 로 브랜치를 생성합니다.</li>
+<li><code>b b</code> 로 브랜치를 전환합니다.</li>
+<li><code>b x</code> 로 브랜치를 삭제합니다.</li>
+</ul>
+
+<hr>
+</div>
+</div>
+
+<div id="outline-container-org4223d1d" class="outline-2">
+<h2 id="org4223d1d">관련글</h2>
+<div class="outline-text-2" id="text-org4223d1d">
+<ul class="org-ul">
+<li><a href="emacs.html">Emacs</a></li>
+<li><a href="doom-emacs.html">Doom Emacs</a></li>
+<li><a href="spacemacs.html">Spacemacs</a></li>
+<li><a href="git.html">Git</a></li>
+<li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
+<li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
+</ul>
+</div>
+</div>
+<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
