--- a/dockerfile.html
+++ b/dockerfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-24 Sun 23:00 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dockerfile - Seorenn Static Pages</title>
@@ -26,7 +26,11 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Dockerfile</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+Dockerfile 은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위한 특수한
+DSL 스크립트 언어로 작성하는 파일입니다.
+</p>
+
 <div id="outline-container-org7f0d3a8" class="outline-2">
 <h2 id="org7f0d3a8">평범하게 이미지 만들기</h2>
 <div class="outline-text-2" id="text-org7f0d3a8">
@@ -83,6 +87,6 @@ ENTRYPOINT ["/usr/local/bin/app"]
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
