--- a/doom-emacs-config.html
+++ b/doom-emacs-config.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-24 Sun 00:22 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 설정 기본 - Seorenn Static Pages</title>
@@ -150,8 +150,12 @@ Emacs Lisp 코드이기 때문에 이 외의 평범한 Emacs 설정 코드들도
 <div class="outline-text-2" id="text-orgde87d7c">
 <p>
 Doom Emacs 에서 사용하지 않는 확장을 설치하려면 여기에 명시를 함으로써 설치할 수
-있습니다. 다만 개인적으로는 아직 써 본 일이 없어서 잘은 모르겠네요.
+있습니다. 예를 들어 emojify 확장을 설치하려면 아래 코드를 추가하면 됩니다.
 </p>
+<div class="org-src-container">
+<pre class="src src-lisp">(package! emojify)
+</pre>
+</div>
 
 <hr>
 </div>
@@ -166,6 +170,6 @@ Doom Emacs 에서 사용하지 않는 확장을 설치하려면 여기에 명시
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
