--- a/doom-emacs-install.html
+++ b/doom-emacs-install.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-24 Sun 00:22 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 설치하기 - Seorenn Static Pages</title>
@@ -31,8 +31,8 @@ gtag('config', 'UA-44534026-1');
 <h2 id="org791e510">Emacs 설치</h2>
 <div class="outline-text-2" id="text-org791e510">
 <p>
-Doom Emacs 는 Emacs용 설정 스크립트이기 때문에 Emacs 는 별도로 설치해야 합니다.
-<a href="./install-emacs.html">Emacs 설치</a>글을 참고하여 설치를 합니다.
+Doom Emacs 는 <a href="emacs.html">Emacs</a> 설정 스크립트이기 때문에 Emacs 는 별도로 설치해야 합니다.
+<a href="./install-emacs.html">Emacs 설치</a> 글을 참고하여 설치를 합니다.
 이미 설치가 되어있다면 다음으로 넘어갑니다.
 </p>
 </div>
@@ -156,6 +156,6 @@ Doom Emacs 도 개발이 잦아서 변화가 자주 있는 편입니다. 또한 
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
