--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-21 Thu 21:52 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Doom Emacs 단축키 메모 - Seorenn Static Pages</title>
@@ -27,7 +27,9 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Doom Emacs 단축키 메모</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header><p>
-실제로 사용하면서 유용하다 싶은 단축키를 정리하는 거기 때문에 자주 업데이트 될 문서입니다.
+실제로 사용하면서 유용하다 싶은 <a href="doom-emacs.html">Doom Emacs</a> 단축키를
+정리합니다. 모든 단축키는 <code>SPC ?</code> 키로 직접 확인해봅시다.
+또한 <a href="vim.html">Vim</a> 단축키를 잘 알아두는 것도 도움이 되니 해당 항목도 참고합시다.
 </p>
 
 <div id="outline-container-org05f22da" class="outline-2">
@@ -131,6 +133,8 @@ gtag('config', 'UA-44534026-1');
 </ul>
 
 <hr>
+
+<hr>
 </div>
 </div>
 </div>
@@ -144,6 +148,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
