--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-24 Sun 23:00 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -30,6 +30,11 @@ gtag('config', 'UA-44534026-1');
 어서오세요. Seorenn 의 특수한 페이지 저장소입니다. 이 곳은 그냥 제가 원할
 때 마다 조금씩 글을 작성하여 즉석에서 업데이트 하는 용도로 만들어졌습니다.
 따라서 미완성 글들이 넘쳐나며 동시에 업데이트도 자주 발생하는 그런 글들만 모여 있습니다.
+</p>
+
+<p>
+주로 IT나 프로그래밍, 개발과 관련된 정보 위주로 구성되어 있습니다만 간혹 이상한
+도구에 관한 메모를 쓸 때도 있습니다. 사실상 개인 메모장 대용입니다. 😃
 </p>
 
 <div id="outline-container-org164dc77" class="outline-2">
@@ -102,6 +107,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
