--- a/install-emacs.html
+++ b/install-emacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs 설치 - Seorenn Static Pages</title>
@@ -27,7 +27,7 @@ gtag('config', 'UA-44534026-1');
 <header>
 <h1 class="title">Emacs 설치</h1>
 <h2><a href="/">Seorenn Static Pages</a></h2></header><p>
-Emacs 를 설치하는 방법은 여러가지가 있습니다만 여기서는 macOS 에서 Homebrew 를
+<a href="emacs.html">Emacs</a> 를 설치하는 방법은 여러가지가 있습니다만 여기서는 macOS 에서 Homebrew 를
 통해 설치하는 것을 가정하여 다음의 방법으로 설치할 수 있습니다.
 </p>
 
@@ -65,12 +65,12 @@ Emacs 를 설치하는 방법은 여러가지가 있습니다만 여기서는 ma
 </p>
 <div class="org-src-container">
 <pre class="src src-bash">brew tap d12frosted/emacs-plus
-brew install emacs-plus <span style="color: #51afef;">[</span>options<span style="color: #51afef;">]</span>
+brew install emacs-plus
 </pre>
 </div>
 <p>
-option 으로는 여러 가지가 있지만 개인적으로는 Spacemacs Icon만 제외시키면
-신경 쓸 필요가 없을 것 같습니다. 즉 Doom Emacs 를 쓸 예정이라면 아래와 같이
+Emacs Plus 는 기본적으로 스페이스맥스 아이콘으로 표시됩니다. 이것이 싫다면
+아래와 같이 빌드 옵션을 줘서 빌드할 수 있습니다.
 설치하면 됩니다.
 </p>
 <div class="org-src-container">
@@ -91,9 +91,10 @@ option 으로는 여러 가지가 있지만 개인적으로는 Spacemacs Icon만
 <ul class="org-ul">
 <li><a href="./emacs.html">Emacs</a></li>
 <li><a href="./doom-emacs.html">Doom Emacs</a></li>
+<li><a href="spacemacs.html">Spacemacs</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
