--- a/magit.html
+++ b/magit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-24 Sun 00:22 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Magit - Seorenn Static Pages</title>
@@ -33,12 +33,13 @@ It's Magit! A Git Porcelain inside Emacs
 </blockquote>
 
 <p>
-에 그러니까&#x2026; Emacs용 Git 프론트엔드/클라이언트 확장입니다. 개인적으로는
+에 그러니까&#x2026; <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a> 프론트엔드/클라이언트 확장입니다. 개인적으로는
 Emacs의 킬러 소프트웨어 중 하나라고 볼 수 있을 정도로 막강합니다.
 </p>
 
 <p>
-참고로 이 글은 순수 magit이 아닌 Doom Emacs 나 Spacemacs 용으로 커스터마이징 된
+참고로 이 글은 순수 magit이 아닌 <a href="doom-emacs.html">Doom Emacs</a>나
+<a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 살펴봅니다.
 </p>
 
@@ -145,6 +146,6 @@ Doom Emacs 에서는 <code>SPC g g =, Spacemacs 에서는 =SPC g s</code> 단축
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
