--- a/profile.html
+++ b/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-19 Tue 16:24 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Profile - Seorenn Static Pages</title>
@@ -33,6 +33,26 @@ gtag('config', 'UA-44534026-1');
 <p>
 네 Seorenn 입니다. 한국어로 '세오렌' 이라고 대충 읽으면 됩니다. 잡다한 일을 하는
 개발자이고 고전양식 혹은 르네상스양식 건축물 좋아합니다.
+</p>
+
+<p>
+제법 낡은(?) 개발자이기 때문에 터미널로 UNIX 환경에서 <a href="vim.html">Vim</a> 으로
+편집하는 것을 즐겼지만, 동시에 <a href="emacs.html">Emacs</a> 또한 오랫동안
+사용해왔었고, 요근래 한동안은 <a href="spacemacs.html">Spacemacs</a> 를 사용하다
+최근에는 <a href="doom-emacs.html">Doom Emacs</a> 로 전향한 상태입니다.
+</p>
+
+<p>
+좋아하는 프로그래밍 언어는 <a href="swift.html">Swift</a> 와
+<a href="python.html">Python</a> 을 꼽습니다.
+</p>
+
+<p>
+들여쓰기는 탭 보다는 스페이스 4칸을 선호합니다.
+</p>
+
+<p>
+아 난 도데체 뭘 쓰고 있는 것일까😏
 </p>
 </div>
 </div>
@@ -72,6 +92,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 19일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
