--- a/emacs.html
+++ b/emacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-24 Sun 00:07 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Emacs - Seorenn Static Pages</title>
@@ -31,6 +31,13 @@ gtag('config', 'UA-44534026-1');
 이름의 유래는 Editor MACroS 의 약자로 에디터 매크로 모음이라고도 볼 수 있는데
 실제로 이맥스 자체는 C 로 구현된 Emacs Lisp 엔진과 이를 이용해 만들어진 수 많은
 Emacs Lisp Function 으로 구성되어 있습니다.
+</p>
+
+<p>
+그런데 편집기라기 보다는 플랫폼 혹은 환경에 가까운 도구이기 때문에 - 혹자는
+OS라고 표현하기도 합니다만 - 설정이 굉장히 난해한 편입니다. 처음 시도하신다면
+누군가의 설정을 따라하시거나 혹은 <a href="spacemacs.html">Spacemacs</a> 나
+<a href="doom-emacs.html">Doom Emacs</a> 같은 설정팩을 사용하는 것도 나쁘지는 않습니다.
 </p>
 
 <div id="outline-container-orgd7d8e11" class="outline-2">
@@ -70,6 +77,10 @@ Emacs Lisp Function 으로 구성되어 있습니다.
 <p>
 위에서 PID는 앞서 구한 Emacs 의 PID 숫자를 넣어야 합니다.
 </p>
+
+<p>
+(근데 잘 안 될 때도 있습니다🤦)
+</p>
 </div>
 </div>
 </div>
@@ -88,6 +99,6 @@ Emacs Lisp Function 으로 구성되어 있습니다.
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
