--- a/spacemacs.html
+++ b/spacemacs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-24 Sun 00:22 -->
+<!-- 2019-11-25 Mon 00:43 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Spacemacs - Seorenn Static Pages</title>
@@ -30,11 +30,11 @@ gtag('config', 'UA-44534026-1');
 스페이스맥스(Spacemacs)는 Community Driven Emacs Configuration 으로 거대한 설정
 파일 묶음 프로젝트입니다. <a href="vim.html">Vim</a> 키맵을 구현하는 evil 을 기반으로 많은 확장들을
 여기에 맞게 설정하고 있습니다. 또한 이름에 맞게 스페이스키를 커맨드 트리거로
-사용하는 등 기존 Emacs 에 비해 편리하면서도 통일된 키맵을 제공하는 것이 특징입니다.
+사용하는 등 기존 <a href="emacs.html">Emacs</a> 에 비해 편리하면서도 통일된 키맵을 제공하는 것이 특징입니다.
 </p>
 
 <p>
-개인적으로 1년 넘게 사용해오다 최근에는 Doom Emacs 로 갈아타긴 했지만 편리한
+개인적으로 1년 넘게 사용해오다 최근에는 <a href="doom-emacs.html">Doom Emacs</a> 로 갈아타긴 했지만 편리한
 설정 환경과 Emacs 를 벗어나지 않고도 다양한 확장을 자동으로 설치해 주는 등
 여전히 좋은 설정팩이라고 생각합니다.
 </p>
@@ -63,6 +63,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
