--- a/python.html
+++ b/python.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-25 Mon 22:13 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Python - Seorenn Static Pages</title>
@@ -33,6 +33,89 @@ gtag('config', 'UA-44534026-1');
 언어라는 점이 가장 큰 특징입니다.
 </p>
 
+<div id="outline-container-orgb198dc7" class="outline-2">
+<h2 id="orgb198dc7">메모</h2>
+<div class="outline-text-2" id="text-orgb198dc7">
+</div>
+<div id="outline-container-org2179ff7" class="outline-3">
+<h3 id="org2179ff7">Comprehension</h3>
+<div class="outline-text-3" id="text-org2179ff7">
+</div>
+<div id="outline-container-orgdd7245e" class="outline-4">
+<h4 id="orgdd7245e">Map</h4>
+<div class="outline-text-4" id="text-orgdd7245e">
+<div class="org-src-container">
+<pre class="src src-python">[x * x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist]
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org8d2d448" class="outline-4">
+<h4 id="org8d2d448">Filter</h4>
+<div class="outline-text-4" id="text-org8d2d448">
+<div class="org-src-container">
+<pre class="src src-python">[x <span style="color: #51afef;">for</span> x <span style="color: #51afef;">in</span> somelist <span style="color: #51afef;">if</span> iswhat(x)]
+</pre>
+</div>
+</div>
+</div>
+</div>
+<div id="outline-container-org660f071" class="outline-3">
+<h3 id="org660f071">파일 혹은 디렉토리(폴더) 관련</h3>
+<div class="outline-text-3" id="text-org660f071">
+</div>
+<div id="outline-container-orgf9927be" class="outline-4">
+<h4 id="orgf9927be">경로에서 파일명만 얻기</h4>
+<div class="outline-text-4" id="text-orgf9927be">
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
+&gt;&gt;&gt; os.path.basename(<span style="color: #98be65;">'/foo/bar/test.txt'</span>)
+<span style="color: #98be65;">'test.txt'</span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org0413e63" class="outline-4">
+<h4 id="org0413e63">파일명에서 확장자 분리하기</h4>
+<div class="outline-text-4" id="text-org0413e63">
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
+&gt;&gt;&gt; os.path.splitext(<span style="color: #98be65;">'test.txt'</span>)
+(<span style="color: #98be65;">'test'</span>, <span style="color: #98be65;">'.txt'</span>)
+</pre>
+</div>
+<p>
+<code>splitext</code> 는 파일명 뿐만이 아니라 경로(path)에서도 동작합니다. 예를 들어
+<code>/foo/bar/text.txt</code> 를 입력할 경우 <code>/foo/bar/text</code> 와 <code>.txt</code> 로 분리됩니다.
+</p>
+</div>
+</div>
+<div id="outline-container-org92ced37" class="outline-4">
+<h4 id="org92ced37">파일 혹은 디렉토리 구분하기</h4>
+<div class="outline-text-4" id="text-org92ced37">
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
+&gt;&gt;&gt; os.path.isfile(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
+<span style="color: #a9a1e1;">True</span>
+&gt;&gt;&gt; os.path.isdir(<span style="color: #98be65;">'/foo/bar/some/file.txt'</span>)
+<span style="color: #a9a1e1;">False</span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org1e42a75" class="outline-4">
+<h4 id="org1e42a75">디렉토리 안의 파일 목록 얻기</h4>
+<div class="outline-text-4" id="text-org1e42a75">
+<div class="org-src-container">
+<pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">import</span> os
+&gt;&gt;&gt; os.listdir(<span style="color: #98be65;">'.'</span>)
+[<span style="color: #98be65;">'foo.a'</span>, <span style="color: #98be65;">'bar.b'</span>, <span style="color: #98be65;">'somedir'</span>, ...]
+</pre>
+</div>
+</div>
+</div>
+</div>
+</div>
 <div id="outline-container-orge25f44a" class="outline-2">
 <h2 id="orge25f44a">관련된 글 목록</h2>
 <div class="outline-text-2" id="text-orge25f44a">
@@ -41,6 +124,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
