--- a/python.html
+++ b/python.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-25 Mon 22:13 -->
+<!-- 2019-11-25 Mon 23:54 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Python - Seorenn Static Pages</title>
@@ -37,9 +37,9 @@ gtag('config', 'UA-44534026-1');
 <h2 id="orgb198dc7">메모</h2>
 <div class="outline-text-2" id="text-orgb198dc7">
 </div>
-<div id="outline-container-org2179ff7" class="outline-3">
-<h3 id="org2179ff7">Comprehension</h3>
-<div class="outline-text-3" id="text-org2179ff7">
+<div id="outline-container-orgf085003" class="outline-3">
+<h3 id="orgf085003">List Comprehension</h3>
+<div class="outline-text-3" id="text-orgf085003">
 </div>
 <div id="outline-container-orgdd7245e" class="outline-4">
 <h4 id="orgdd7245e">Map</h4>
