--- a/magit.html
+++ b/magit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-25 Mon 00:43 -->
+<!-- 2019-11-27 Wed 00:14 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Magit - Seorenn Static Pages</title>
@@ -59,6 +59,10 @@ Doom Emacs 에서는 <code>SPC g g =, Spacemacs 에서는 =SPC g s</code> 단축
 
 <p>
 아래의 단축키들은 모두 이 화면에서 시작됩니다.
+</p>
+
+<p>
+내용을 갱신(refresh)하기 위해서는 <code>g r</code> 을 입력하면 됩니다.
 </p>
 </div>
 </div>
@@ -146,6 +150,6 @@ Doom Emacs 에서는 <code>SPC g g =, Spacemacs 에서는 =SPC g s</code> 단축
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 25일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 27일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
