--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-27 Wed 23:34 -->
+<!-- 2019-11-28 Thu 23:03 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -81,6 +81,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="git.html">Git</a></li>
 <li><a href="docker.html">Docker</a></li>
 <li><a href="tmux.html">Tmux</a></li>
+<li><a href="kubectl.html">kubectl</a></li>
 </ul>
 </div>
 </div>
@@ -108,6 +109,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 27일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 28일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
