--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-27 Wed 23:36 -->
+<!-- 2019-11-29 Fri 12:24 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sitemap - Seorenn Static Pages</title>
@@ -65,6 +65,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="swiftui-tips.html">SwiftUI 팁 모음</a></li>
 <li><a href="tmux.html">Tmux</a></li>
 <li><a href="vim.html">Vim</a></li>
+<li><a href="kubectl.html">kubectl</a></li>
 <li><a href="macos.html">macOS</a></li>
 <li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
 <li><a href="org-publish-sapzil.html">org-publish 삽질기</a></li>
@@ -74,6 +75,6 @@ gtag('config', 'UA-44534026-1');
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 </ul>
-<div id="footer"><div id="time">2019년 11월 27일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
