Experimental earth inserting

--- a/python-3-static-typing.html
+++ b/python-3-static-typing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-17 Sun 23:04 -->
+<!-- 2019-11-29 Fri 16:00 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Python 3 Static Typing - Seorenn Static Pages</title>
@@ -363,11 +363,11 @@ PEP-484 "No type checking happens at runtime"
 <ul class="org-ul">
 <li><a href="./python.html">Python</a></li>
 <li><a href="./swift.html">Swift</a></li>
-<li><a target="_blank" href="https://item4.blog/2017-09-14/Python-Typing-with-mypy/">mypy와 함께하는
+<li><a target="_blank" href="https://item4.blog/2017-09-14/Python-Typing-with-mypy/">🌏mypy와 함께하는
 Python Typing</a></li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 17일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
