--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="kr">
 <head>
-<!-- 2019-11-28 Thu 23:03 -->
+<!-- 2019-11-29 Fri 21:40 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Frontpage - Seorenn Static Pages</title>
@@ -35,6 +35,11 @@ gtag('config', 'UA-44534026-1');
 <p>
 주로 IT나 프로그래밍, 개발과 관련된 정보 위주로 구성되어 있습니다만 간혹 이상한
 도구에 관한 메모를 쓸 때도 있습니다. 사실상 개인 메모장 대용입니다. 😃
+</p>
+
+<p>
+모든 글은 <a href="emacs.html">Emacs</a> 상에서 <a href="org-mode.html">Org Mode</a>로 글을
+작성해서 <a href="org-publish.html">Org Publish</a>를 이용해 퍼블리쉬 합니다.
 </p>
 
 <div id="outline-container-org164dc77" class="outline-2">
@@ -73,15 +78,22 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
+<div id="outline-container-org7d1dc35" class="outline-3">
+<h3 id="org7d1dc35">도구들</h3>
+<div class="outline-text-3" id="text-org7d1dc35">
+<ul class="org-ul">
+<li><a href="tmux.html">Tmux</a></li>
+<li><a href="git.html">Git</a></li>
+<li><a href="docker.html">Docker</a></li>
+<li><a href="kubectl.html">kubectl</a></li>
+</ul>
+</div>
+</div>
 <div id="outline-container-orgd9d658f" class="outline-3">
 <h3 id="orgd9d658f">분류하기 애매한 것들</h3>
 <div class="outline-text-3" id="text-orgd9d658f">
 <ul class="org-ul">
 <li><a href="mongodb.html">MongoDB</a></li>
-<li><a href="git.html">Git</a></li>
-<li><a href="docker.html">Docker</a></li>
-<li><a href="tmux.html">Tmux</a></li>
-<li><a href="kubectl.html">kubectl</a></li>
 </ul>
 </div>
 </div>
@@ -109,6 +121,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 11월 28일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 11월 29일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
